# northwind

./: .gitignore  README.md  pyproject.toml
notebooks/: create-db.ipynb
sql/: insert-data.sql
