[project]
name = "northwind"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "duckdb>=1.1.2",
    "notebook>=7.2.2",
    "pandas>=2.2.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "DataBooth"}


[tool.pdm]
distribution = false
